# log-intel

./: .gitignore  README.md  logintel-usecases.html
engine/: Cargo.toml  build.rs
proto/: log_event.proto
retrieval/: build.gradle
retrieval/src/main/java/project/logintel/retrieval/: RetrievalApplication.java
retrieval/src/main/resources/: application.yaml
retrieval/src/test/java/project/logintel/retrieval/: RetrievalApplicationTests.java
sidecar/: go.mod
ui/: .cta.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ui/src/: app.css
ui/src/features/cockpit/: CockpitPage.tsx  anomalyChart.tsx  data.ts  graphSvg.tsx  icons.tsx  types.ts  useCockpit.ts
ui/src/features/cockpit/views/: AnomaliesView.tsx  ChatView.tsx  CommandCenter.tsx  GraphExplorer.tsx  LogExplorer.tsx  RunbooksView.tsx
ui/src/routes/: __root.tsx  index.tsx
