[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
axum = "0.8.9"
bincode = "3.0.0"
config = "0.15.23"
dotenvy = "0.15.7"
memmap2 = "0.9.10"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
nalgebra = "0.35.0"
petgraph = { version = "0.8.3", features = ["serde-1"] }
prost = "0.14.4"
redb = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tantivy = "0.26.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tonic = "0.14.6"
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
zstd = "0.13.3"

[build-dependencies]
tonic-build = "0.14.6"
tonic-prost-build = "0.14.6"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
tokio = { version = "1.52.3", features = ["test-util"] }
